Add meta tags and import swiped-events library

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="./assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Um jogo para passar o tempo">
+  <meta name="author" content="Kurumi30">
+  <link rel="icon" type="image/png" href="./assets/favicon.ico" />
   <title>2048</title>
   <link rel="stylesheet" href="style.css">
   <script type="module" src="./js/script.js"></script>
+  <script src="./js/swiped-events.min.js"></script>
 </head>
 
 <body>
