Update swiped-events.min.js script source

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <title>2048</title>
   <link rel="stylesheet" href="style.css">
   <script type="module" src="./js/script.js"></script>
-  <script src="./js/swiped-events.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/swiped-events/1.1.9/swiped-events.min.js"
+    integrity="sha512-Km1M9MRIhy+uzmSn7MU2G0fQawFMpfpScHpf0UUvcpkGJCJhwlTRF/mbTUimo1N9woYZ5RLES7iL+kp65Q1d0Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
