Add Notyf library for notifications

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/png" href="./assets/favicon.ico" />
   <title>2048</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+
+  <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js" defer></script>
   <script type="module" src="./js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/swiped-events/1.1.9/swiped-events.min.js"
     integrity="sha512-Km1M9MRIhy+uzmSn7MU2G0fQawFMpfpScHpf0UUvcpkGJCJhwlTRF/mbTUimo1N9woYZ5RLES7iL+kp65Q1d0Q=="
@@ -16,7 +19,7 @@
 </head>
 
 <body>
-  <div id="game-board"></div>
+  <main id="game-board"></main>
 </body>
 
 </html>
