--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Um jogo para passar o tempo">
   <meta name="author" content="Kurumi30">
+  <meta name="og:url" content="">
+  <meta property="og:title" content="2048 game">
+  <meta name="og:description" content="Um jogo para passar o tempo">
+  <meta property="og:image" content="./assets/favicon.ico">
   <link rel="icon" type="image/png" href="./assets/favicon.ico" />
   <title>2048</title>
   <link rel="stylesheet" href="style.css">
