Update game header and grid size

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 </head>
 
 <body>
+  <header class="header">
+    <h1 class="title">2048 Game</h1>
+
+    <div class="score-container stat-container">
+      <span class="stat-label">Score</span>
+
+      <div class="score" data-score>
+        <div class="stat-amount score-amount" data-score-amount>0</div>
+      </div>
+    </div>
+  </header>
+
   <main id="game-board"></main>
 </body>
 
